# portunus

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  buf.gen.yaml  docker-compose.override.yaml  docker-compose.ws.yaml  docker-compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  format.yml  lint.yml  publish-images.yml  release.yml  test-lua.yml  test.yml  type-check.yml
docs/: cutover-landing-order.md  pr-19-body-corrections.md  ws-load-test-results.md
docs/runbooks/: flush-auth-cache.md
portunus/: Dockerfile  README.md  logconf.yaml  pyproject.toml
portunus/portunus/: __init__.py  app.py  cli.py  config.py  exceptions.py  logging.py  metrics.py  models.py  util.py
portunus/portunus/admin/v1/: admin_pb2.py  admin_pb2.pyi  admin_pb2_grpc.py
portunus/portunus/backends/: __init__.py  protocols.py
portunus/portunus/backends/aws/: __init__.py  auth.py  identity.py  publisher.py
portunus/portunus/backends/debug/: __init__.py  publisher.py
portunus/portunus/backends/noop/: __init__.py  publisher.py
portunus/portunus/grpc/: __init__.py  admin_servicer.py  auth_servicer.py  frame_observer.py  proc_servicer.py  proxy_auth.py  publish_queue.py  server.py
portunus/portunus/grpc/_generated/portunus_admin/v1/: admin_pb2.py  admin_pb2_grpc.py
portunus/portunus/relay/: __init__.py  auth.py  extproc.py  extproc_server.py  handler.py  logger.py
portunus/portunus/services/: __init__.py  arn_service.py  auth_service.py  cache_service.py  payload_service.py  publish_queue.py  publish_service.py  secret_validation_service.py  secrets_service.py  service_auth.py  signing_service.py  state_service.py  team_service.py  xray_service.py
portunus/tests/: conftest.py  test_arn.py  test_auth_service.py  test_aws_client_pool.py  test_backends.py  test_cache_flush.py  test_cache_flush_semantics.py  test_cache_key.py  test_extproc_handler.py  test_firehose_chunking.py  test_firehose_config_guard.py  test_frame_observer.py  test_glue_import.py  test_grpc_admin_servicer.py  test_grpc_auth_servicer.py  test_grpc_health_monitor.py  test_grpc_proc_servicer.py  test_grpc_server_drain.py  test_grpc_server_startup.py  test_kinesis_chunking.py  test_lifespan_shutdown.py  test_metrics.py  test_models_decode.py  test_payload.py  test_publish_queue.py  test_publish_service.py  test_relay_auth.py  test_relay_handler.py  test_relay_integration.py  test_relay_logger.py  test_request_id_propagation.py  test_schema_consistency.py  test_secrets_service.py  test_service_auth.py  test_signing.py  test_signing_concurrency.py  test_target_validation.py  test_team_attribution.py  test_trace_propagation.py  test_wait_until.py
proto/portunus/admin/v1/: admin.proto
proto/portunus_admin/v1/: admin.proto
proxy/: Dockerfile  README.md  entrypoint.sh  envoy.yaml  lua.lua  xray.json
proxy/lib/: .busted  Dockerfile.test  proxy-utils-1.0-0.rockspec
proxy/lib/proxy_utils/: init.lua  logging.lua  portunus.lua  request_signing.lua  utils.lua
proxy/lib/spec/: anthropic_signing_test_cases.json  logging_spec.lua  portunus_spec.lua  request_signing_spec.lua  utils_spec.lua
scripts/: gen_proto.sh  generate-test-data.py  localstack-init-async-analysis.sh  localstack-init-firehose.sh  localstack-init-kinesis.sh  localstack-init.sh
tests/: conftest.py  dump_logs.py  test_behaviours.py  test_behaviours_ws.py  test_disruption.py  test_e2e.py  test_e2e_signing.py  test_e2e_websocket.py  test_http_proxy_behaviour.py  test_inspect_compat.py  test_redis_cache.py  test_smoke_audit_records.py  test_ws_proxy_behaviour.py
ws-echo/: Dockerfile  server.py
