[project]
name = "portunus-workspace"
version = "0.1.0"
description = ""
authors = [{ name = "Tom.Catling", email = "Tom.Catling@dsit.gov.uk" }]
requires-python = ">=3.12.0, <3.13"
readme = "README.md"
dependencies = [
    "portunus",
]

[dependency-groups]
dev = [
    "requests>=2.34.2,<3",
    "mypy>=2.1.0,<3",
    "ruff>=0.15.20,<0.16",
    "boto3-stubs[secretsmanager, kms]>=1.43.40,<2",
    "types-requests>=2.33.0.20260518,<3",
    "types-pyyaml>=6.0.12.20260518,<7",
    "types-aiobotocore>=3.7.0,<4",
    "types-aws-xray-sdk>=2.15.0.20260518,<3",
    "pre-commit>=4.6.0,<5",
    "pytest>=9.1.1,<10",
    "pytest-asyncio>=1.4.0,<2",
    "aws-xray-sdk>=2.14.0,<3",
    "aiobotocore>=2.24.1,<3",
    "redis>=5.0.0,<6",
    "moto>=5.2.2,<6",
    "pandas>=3.0.3,<4",
    "pandas-stubs>=3.0.3.260530,<4",
    "pyarrow>=24.0.0,<25",
    "freezegun>=1.5.0,<2",
    "fakeredis>=2.36.2,<3",
]

[tool.uv]
package = false

[tool.uv.sources]
portunus = { path = "portunus", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E",   # pycodestyle errors
          "W",   # pycodestyle warnings
          "F",   # flake8
          "D",   # pydocstyle
          "I",   # isort
        ]
ignore = ["E203", "D10", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.rules]
# These type: ignore comments are needed for mypy (which CI runs) but
# ty doesn't recognise mypy error codes and flags them as unused.
unused-type-ignore-comment = "ignore"

[tool.mypy]
exclude = [
    "^\\.venv/.*",
]

[[tool.mypy.overrides]]
# Brotli ships no type stubs.
module = ["brotli"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "portunus/tests",
]
# Exclude directories from test discovery
norecursedirs = [
    ".*",
    ".venv",
]