[project]
name = "portunus"
dynamic = ["version"]
description = ""
authors = [{ name = "Tom.Catling", email = "Tom.Catling@dsit.gov.uk" }]
requires-python = "~=3.12"
dependencies = [
    # pydantic is used directly by config/models/auth_servicer/signing; it was
    # previously pulled in transitively via fastapi (now removed), so pin it
    # explicitly.
    "pydantic>=2.7.0,<3",
    "cryptography>=43.0.0,<44",
    "rsa~=4.9",
    "boto3>=1.34.144,<2",
    "aiobotocore>=2.13.0,<3",
    "pyyaml>=6.0.1,<7",
    "redis>=5.0.0,<6",
    "async-timeout>=4.0.3,<5",
    "aws-xray-sdk>=2.14.0,<3",
    "contextvars~=2.4",
    "websockets>=12.0,<14",
    # gRPC servers for Envoy ext_authz / ext_proc filters. xds-protos>=1.80
    # ships the stable v3 namespace (older versions only have v3alpha).
    "grpcio>=1.66.0,<2",
    "xds-protos>=1.80.0",
    "googleapis-common-protos>=1.65.0,<2",
    # Standard gRPC health checking (grpc.health.v1.Health) for the ECS /
    # ALB health probe, and server reflection so operators can introspect
    # the served services without a local .proto copy. protobuf itself is
    # pinned transitively by xds-protos (>=6.31); we don't pin it here to
    # avoid fighting that constraint.
    "grpcio-health-checking>=1.66.0,<2",
    "grpcio-reflection>=1.66.0,<2",
    # orjson on the publish hot path — every Firehose record goes through
    # ``orjson.dumps`` (3-5x faster than stdlib json on dict-heavy payloads),
    # which adds up at 5+ records per HTTP request × N req/s/pod.
    "orjson>=3.10.0,<4",
    # wsproto: sans-IO WebSocket frame parsing in the ext_proc Process
    # service. ``FrameObserver`` wraps ``wsproto.Connection`` to recover
    # logical text/binary/close frames from post-101 byte chunks.
    "wsproto>=1.2.0,<2",
]

[dependency-groups]
dev = [
    "mypy>=1.11.0,<2",
    "ruff>=0.5.5,<0.6",
    "boto3-stubs[secretsmanager, logs]>=1.34.149,<2",
    "types-pyyaml>=6.0.12.20240724,<7",
    "moto>=5.1.13,<6",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "fakeredis>=2.26.0,<3",
    "freezegun>=1.5.0,<2",
    # prek: fast pre-commit runner. Hooks defined in ../.pre-commit-config.yaml;
    # CI runs the same set (see .github/workflows/lint.yml).
    "prek>=0.4.0",
    "grpcio-tools>=1.66.0,<2",
]

[project.scripts]
portunus = "portunus.cli:main"
# Process entrypoint for the gRPC server (the whole Portunus runtime now that
# FastAPI is gone). Used by the container CMD.
portunus-server = "portunus.grpc.server:main"

[tool.hatch.build.targets.sdist]
packages = ["portunus"]

[tool.hatch.build.targets.wheel]
packages = ["portunus"]

[tool.hatch.version]
source = "vcs"
raw-options = { root = "..", local_scheme = "no-local-version" }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E",   # pycodestyle errors
          "W",   # pycodestyle warnings
          "F",   # flake8
          "D",   # pydocstyle
          "I",   # isort
        ]
ignore = ["E203", "D10", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]

[[tool.mypy.overrides]]
# Third-party gRPC / protobuf / boto packages ship without type stubs (or
# only partial ones).
module = [
    "grpc",
    "grpc.*",
    "grpc_health.*",
    "grpc_reflection.*",
    "google.protobuf.*",
    "google.rpc.*",
    "mypy_boto3_kms",
    "aiobotocore",
    "aiobotocore.*",
    "aws_xray_sdk.*",
    "envoy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (requiring Docker, network, etc.)",
]
