[project]
name = "portunus"
dynamic = ["version"]
description = ""
authors = [{ name = "Tom.Catling", email = "Tom.Catling@dsit.gov.uk" }]
requires-python = "~=3.12"
dependencies = [
    "fastapi>=0.111.0,<0.112",
    "gunicorn>=22.0.0,<23",
    "cryptography>=43.0.0,<44",
    "httpx>=0.27.0",
    "rsa~=4.9",
    "boto3>=1.34.144,<2",
    "aiobotocore>=2.13.0,<3",
    "pyyaml>=6.0.1,<7",
    "redis>=5.0.0,<6",
    "async-timeout>=4.0.3,<5",
    "aws-xray-sdk>=2.15.0,<3",
    "contextvars~=2.4",
    "aiocache>=0.12.3,<0.13",
    "websockets>=12.0,<14",
]

[dependency-groups]
dev = [
    "mypy>=1.11.0,<2",
    "ruff>=0.5.5,<0.6",
    "boto3-stubs[secretsmanager, logs]>=1.34.149,<2",
    "types-pyyaml>=6.0.12.20240724,<7",
    "moto>=5.1.13,<6",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "fakeredis>=2.26.0,<3",
]

[project.scripts]
portunus = "portunus.cli:main"

[tool.hatch.build.targets.sdist]
packages = ["portunus"]

[tool.hatch.build.targets.wheel]
packages = ["portunus"]

[tool.hatch.version]
source = "vcs"
raw-options = { root = "..", local_scheme = "no-local-version" }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E",   # pycodestyle errors
          "W",   # pycodestyle warnings
          "F",   # flake8
          "D",   # pydocstyle
          "I",   # isort
        ]
ignore = ["E203", "D10", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (requiring Docker, network, etc.)",
]
