[project]
name = "portunus"
dynamic = ["version"]
description = ""
authors = [{ name = "Tom.Catling", email = "Tom.Catling@dsit.gov.uk" }]
requires-python = "~=3.12"
dependencies = [
    "fastapi>=0.111.0,<0.112",
    "gunicorn>=22.0.0,<23",
    "cryptography>=43.0.0,<44",
    "httpx>=0.27.0,<1",
    "rsa~=4.9",
    "boto3>=1.34.144,<2",
    "aiobotocore>=2.13.0,<3",
    "pyyaml>=6.0.1,<7",
    "redis>=5.0.0,<6",
    "async-timeout>=4.0.3,<5",
    "aws-xray-sdk>=2.14.0,<3",
    "contextvars~=2.4",
    "aiocache>=0.12.3,<0.13",
    "websockets>=12.0,<14",
    # <0.47: uvicorn 0.47.0 imports the ASGI app before the serving event loop
    # exists (encode/uvicorn#2919); XRayService()/AsyncContext() run at import
    # and bind to the wrong loop, so segments never reach handlers and every
    # request logs "No-Trace-Id" (2026-07-02 outage). Guarded by
    # tests/test_trace_propagation.py; lift only when AsyncContext moves to
    # app startup.
    # uvicorn is ignored in .github/dependabot.yml so it isn't bumped
    # automatically — update that ignore rule if this pin changes.
    "uvicorn>=0.29.0,<0.47",
    "Brotli>=1.1.0,<2",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0,<3",
    "ruff>=0.5.5,<0.6",
    "boto3-stubs[secretsmanager, logs]>=1.34.149,<2",
    "types-pyyaml>=6.0.12.20240724,<7",
    "moto>=5.1.13,<6",
    "pytest>=9.0.2,<10",
    "pytest-asyncio>=1.3.0,<2",
    "fakeredis>=2.26.0,<3",
]

[project.scripts]
portunus = "portunus.cli:main"

[tool.hatch.build.targets.sdist]
packages = ["portunus"]

[tool.hatch.build.targets.wheel]
packages = ["portunus"]

[tool.hatch.version]
source = "vcs"
raw-options = { root = "..", local_scheme = "no-local-version" }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E",   # pycodestyle errors
          "W",   # pycodestyle warnings
          "F",   # flake8
          "D",   # pydocstyle
          "I",   # isort
        ]
ignore = ["E203", "D10", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (requiring Docker, network, etc.)",
]
